# therapist

./: .dockerignore  .env.example  .gitattributes  .gitignore  .windows-service-stage.patch  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  compose.yaml  flue.config.ts  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: behavior-safety.yml  bug.yml  bug_report.yml  conduct.yml  config.yml  feature.yml  protocol_proposal.yml
.github/workflows/: ci.yml  release-candidate.yml  scorecard.yml
docs/: ARCHITECTURE.md  CLINICAL_GOVERNANCE.md  CLINICAL_METHOD.md  EVALUATION.md  FLUE_AUDIT.md  IMPLEMENTATION.md  MEMORY.md  MODELS.md  PRODUCT.md  RESEARCH_MEMORY_AND_FRAMEWORKS.md  RESEARCH_VERCEL_EVE.md  SAAS_FUTURE.md  SCOPE.md  SECURITY_AND_PRIVACY.md  SELF_HOSTING.md  SOURCES.md  article-50-assessment.md  claims-and-intended-purpose.md  compliance-assessment-brief.md  dpia-screening.md  maintainer-ai-literacy.md  release-readiness-2026-07-23.md
docs/releases/: unreleased.md  v0.1.0.md  v0.1.1.md  v0.1.2.md
evals/rubrics/: clinical-fidelity.md
evals/scenarios/: ambivalence.yaml  anxiety_meeting.yaml  behavioural_activation.yaml  high_risk.yaml  listening_only.yaml  memory_correction.yaml  rumination.yaml  rupture.yaml
protocols/research/: agent-scope-improvements-2026.md  github-release-hygiene-2026-07-23.md  open-source-release-readiness.md  privacy-and-regulatory-proportionality-2026-07-23.md  provider-data-and-policy-matrix-2026-07-23.md  pydantic-ecosystem-2026.md  telegram-channel.md  therapeutic-skills-sources.md  third-party-licensing-2026-07-23.md
protocols/transdiagnostic/: SKILL.md  manifest.yaml
protocols/transdiagnostic-v0.1.0/: SKILL.md  manifest.yaml
protocols/transdiagnostic-v0.1.0/references/: sources.md
protocols/transdiagnostic-v0.2.0/: SKILL.md  manifest.yaml
protocols/transdiagnostic-v0.3.0/: SKILL.md  manifest.yaml
protocols/transdiagnostic-v0.3.0/skills/build-shared-formulation/: SKILL.md
protocols/transdiagnostic-v0.3.0/skills/change-avoidance-behavior/: SKILL.md
protocols/transdiagnostic-v0.3.0/skills/review-and-maintain-change/: SKILL.md
protocols/transdiagnostic-v0.4.0/: SKILL.md  manifest.yaml
protocols/transdiagnostic-v0.5.0/: SKILL.md  manifest.yaml
protocols/transdiagnostic/references/: sources.md
scripts/: doctor.ts  publish-github.ps1  publish-github.sh  set-telegram-webhook.ts  validate-skills.ts
src/: app.ts  db.ts
src/agents/: therapist.ts
src/channels/: telegram.ts
src/instructions/: THERAPIST.md
src/sandboxes/: restricted.ts
src/services/: health.ts  hindsight.ts  stt.ts
src/shared/: env.ts  log.ts  telegram.ts
src/skills/act-psychological-flexibility/: SKILL.md
src/skills/behavioural-activation/: SKILL.md
src/skills/cbt-anxiety/: SKILL.md
src/skills/collaborative-formulation/: SKILL.md
src/skills/foundational-helping/: SKILL.md
src/skills/high-risk-conversation/: SKILL.md
src/skills/motivational-interviewing/: SKILL.md
src/skills/progressive-assessment/: SKILL.md
src/skills/rumination-and-worry/: SKILL.md
src/skills/session-review-and-closing/: SKILL.md
src/storage/: app-db.ts  memory-vault.ts
src/therapist/: __init__.py  auth.py  chat.py  cli.py  evaluation.py  memory.py  protocol.py  safety.py  telegram.py  telegram_service.py  tui.py
src/tools/: memory.ts
src/types/: assets.d.ts
tests/: TEST_PLAN.md  memory.test.ts  restricted-sandbox.test.ts  telegram.test.ts  test_agent_runtime_contract.py  test_auth.py  test_chat.py  test_cli.py  test_evaluation.py  test_installers.py  test_live_codex_memory.py  test_live_codex_safety.py  test_live_conversational_roleplays.py  test_live_openai.py  test_live_telegram.py  test_longitudinal_memory.py  test_memory.py  test_multilingual_embedding_eval.py  test_process_contracts.py  test_protocol.py  test_safety.py  test_semantic_memory_eval.py  test_telegram.py  test_telegram_service.py  test_therapeutic_skills.py  test_tui.py
tests/cases/: conversational_roleplays.yaml  live_codex_memory.yaml  live_codex_safety.yaml  live_openai.yaml  longitudinal_memory.yaml  multilingual_semantic_memory.yaml  process_contracts.yaml  semantic_memory.yaml  therapeutic_skills.yaml
(+31 files in other folders)
