[project]
name = "therapist-cli"
version = "0.1.0"
description = "Experimental, self-hosted AI guided self-help CLI"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=45,<51",
  "pydantic-ai-slim[anthropic,google,openai]>=2.15,<3",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<10", "ruff>=0.12,<1"]

[project.scripts]
thera = "therapist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/therapist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: requires real provider credentials and network access"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[dependency-groups]
dev = [
    "pydantic-evals>=2.15,<3",
]
