[project]
name = "therapist-cli"
version = "0.1.0"
description = "Experimental self-hosted AI conversation agent with encrypted longitudinal memory"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["ai", "mental-health", "pydantic-ai", "self-hosted", "telegram"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cryptography>=45,<51",
  "huggingface-hub>=1,<2",
  "pydantic-ai-slim[anthropic,google,openai,sentence-transformers]>=2.15,<3",
  "pyyaml>=6,<7",
  "questionary>=2.1,<3",
  "textual>=8.2,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<10", "ruff>=0.12,<1"]

[project.scripts]
thera = "therapist.cli:main"

[project.urls]
Homepage = "https://github.com/matteodante/therapist"
Repository = "https://github.com/matteodante/therapist.git"
Issues = "https://github.com/matteodante/therapist/issues"
Documentation = "https://github.com/matteodante/therapist#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/therapist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: requires real provider credentials and network access"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[dependency-groups]
dev = [
    "pydantic-evals>=2.15,<3",
]
